--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,2 @@
-<h3>Press button to display a list with product names.</h3>
-<button class="main__button" (click)="fetchProducts()">Get products</button>
-
-<div class="main__filter-block">
-    <form class="filter-block__form">
-        <label for="name">Search</label>
-        <input class="filter-block__search" name="search" type="search" (input)="filterProducts()">
-    </form>
-</div>
-
-<hr>
-
-<table class="main__table">
-            <thead>
-                <tr>
-                    <th>Товар</th>
-                    <th>Брэнд</th>
-                    <th>Цена</th>
-                    <th>Оценка</th>
-                    <th>Ссылка</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of displayProducts$">
-                    <td>{{ item.name }}</td>
-                    <td>{{ item.brand }}</td>
-                    <td>{{ item.price }}</td>
-                    <td>{{ item.stars }}</td>
-                    <td><a href="{{ item.link }}" target="_blank" alt="product on amazon">on amazon.co.uk</a></td>
-                </tr>
-            </tbody>
-        </table>
-<h3 class="empty-search-tip visually-hidden">No products found with this filter. 
-    Try to change the text in the field near the "Search".</h3>
+<mat-toolbar class="toolbar" color="primary"><h3 class="h3">List of products</h3></mat-toolbar>
+<products-list>Загрузка...</products-list>
