--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,58 +1,3 @@
-p {
-  font-family: Lato;
-}
-
-h3 {
-  text-align: center;
-}
-
-.main__filter-block {
-  margin: 20px auto;  
-}
-
-.filter-block__form {
-  margin: 0 auto;
-  max-width: 300px;
-  
-}
-
-.filter-block__search {
-  margin-left: 20px;
-}
-
-.main__button {
-  display: block; 
-  margin: 0 auto; 
-  font-size: 20px;
-  border-radius: 10%;
-}
-
-.main__table {
-  width: 800px;
-  max-width: 800px; 
-  margin: 0 auto;
-  font-size: 18px;
-  text-align: left;
-  border-collapse: separate;
-  background: #1c943a38;
-  border: 13px solid #1c943a38;
-  border-radius: 20px;
-}
-
-
-th {
-  padding: 10px;
-}
-
-td {
-padding: 10px;
-border-top: 10px solid rgba(29, 180, 37, 0.432);
-}
-
-.visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+.h3 {
+  margin:0 auto;
 }
