--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
 /* Add application styles & imports to this file! */
+/* Меняли в angular.json 3 на css*/
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
