--- a/src/app/products-list/products-list.css
+++ b/src/app/products-list/products-list.css
@@ -3,40 +3,43 @@
 }
 
 p {
-    font-family: Lato;
-  }
-  
-  h3 {
-    text-align: center;
-  }
-  
-  /* Переместим */
-  form {
-    margin: 0 auto;
-    max-width: 300px;
-  }
-  
-  .filter-block__search {
-    margin-left: 20px;
-  }
+  font-family: Lato;
+}
 
-  
-  .main__table {
-    width: 800px;
-    max-width: 800px; 
-    margin: 0 auto;
-    font-size: 18px;
-    text-align: left;
-  }
+h3 {
+  text-align: center;
+}
+
+/* Переместим */
+form {
+  margin: 0 auto;
+  max-width: 300px;
+}
+
+/* .filter-block__search  */
 
 
-  
-  
-  .visually-hidden {
-    position: absolute;
-    clip: rect(0 0 0 0);
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-  }  
+
+.main__table {
+  width: 800px;
+  max-width: 800px; 
+  margin: 0 auto;
+  font-size: 18px;
+  text-align: left;
+}
+
+.main__table td, th {
+  padding: 10px !important;
+}
+
+
+
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}  
 
