--- a/src/app/products-filtering/products-filtering.component.css
+++ b/src/app/products-filtering/products-filtering.component.css
@@ -1,17 +1,127 @@
+.mat-card {
+    padding: 0;
+}
+
+.filter-input {
+    width: 100%;
+    text-align: center;
+}
+
+.mat-input-hint {
+    margin: 0 auto;
+}
+
 .filter-category-section {
     display: flex;
     flex-direction: column;
-    
-  }
-
-  .filter-category-button {
-    margin: 5px 0;
-  }
-
-  .filter-category-button:first-child {
     margin-top: 15px;
   }
 
-  .clear-filter-button {
-    margin: 10px 0;
+  .filter-category-button {
+      /* margin-top:10px; */
   }
+
+  .filter-category-button:last-child {
+      /* margin-bottom:15px; */
+  }
+
+  .clear-filter-button {
+  }
+
+
+@media (min-width: 300px) {
+
+    .mat-card {
+        width: 100%;
+        max-width: 310px;
+        margin: 0 auto;
+    }
+
+    .filter-category-section {
+        display: grid;
+        grid-template-columns: 165px 150px;
+        justify-items: start;
+        grid-row-gap: 10px;
+        font-size: 0.8rem;
+    }
+
+    .filter-category-button {
+        margin: 0;
+      }
+
+      .filter-category-button:last-child {
+        margin: 0 0 0 105px;    
+      }
+    
+       .clear-filter-button {
+          display: block;
+          width: 200px;
+          height: 40px;
+        margin: 15px auto 0 auto;
+      }
+      .mar-card-content {
+          text-align: center;
+      }
+} 
+@media (min-width: 500px) {
+    .mat-card {
+        width: 100%;
+        max-width: 510px;
+    }
+    .filter-category-section {
+        display: grid;
+        grid-template-columns: 160px 150px 180px;
+        justify-items: start;
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+        font-size: 0.8rem;
+    }
+
+    .filter-category-button {
+        margin: 0;
+      }
+
+      .filter-category-button:last-child {
+        margin: 0;  
+      }
+    
+       .clear-filter-button {
+          display: block;
+          width: 300px;
+          height: 40px;
+          margin: 20px auto 0 auto;
+      }
+      .mar-card-content {
+          text-align: center;
+      }
+}
+
+@media (min-width: 810px) {
+    .mat-card {
+        width: 100%;
+        max-width: 810px;
+    }
+    .filter-category-section {
+        display: flex;
+        flex-direction: column;
+        font-size: 1rem;
+    }
+
+    .filter-category-button {
+        margin-top: 10px;
+      }
+
+      .filter-category-button:last-child {
+        margin: 0;  
+      }
+    
+       .clear-filter-button {
+          display: block;
+          width: 300px;
+          height: 40px;
+          margin: 20px auto 0 auto;
+      }
+      .mar-card-content {
+          text-align: center;
+      }
+}
