--- a/src/app/products-list/products-list.css
+++ b/src/app/products-list/products-list.css
@@ -1,9 +1,21 @@
+* {
+    font-size: inherit;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    width: 100%;
+}
+
 #wrapper {
   display: flex;
 }
 
+
+
 p {
-  font-family: Lato;
+  /* font-family: Lato; */
 }
 
 h3 {
@@ -13,33 +25,237 @@ h3 {
 /* Переместим */
 form {
   margin: 0 auto;
-  max-width: 300px;
+  /* max-width: 300px; */
 }
 
 /* .filter-block__search  */
 
-
-
 .main__table {
-  width: 800px;
-  max-width: 800px; 
-  margin: 0 auto;
-  font-size: 18px;
+    /* width: 1100px;
+  max-width: 1500px;  */
+  margin: 0 auto;   
   text-align: left;
 }
 
 .main__table td, th {
-  padding: 10px !important;
+  /* padding: 10px !important; */
 }
 
-
-
-
 .visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-}  
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+  }
 
+@media (min-width: 300px) {
+
+    #wrapper {
+        flex-direction: column;
+    }
+    .main__table {
+        /* display:block; */
+        width: 310px;
+        max-width: 310px;
+        font-size: 0.8rem !important;
+    }
+      .main__table td {
+        min-width: 30px !important;
+        max-width: 30px !important;
+        padding-left: 10px !important;
+        line-height: 0.8rem;    
+        overflow: hidden; 
+        word-break: break-word;
+        padding-right: 10px;
+        margin-top:10px;
+      }
+
+      .main__table th {
+        max-width: 30px !important;
+        min-width: 30px !important;
+        padding-left: 10px !important;
+        line-height: 0.8rem;   
+        padding-right: 10px;
+      }
+
+      .main__table td:last-child {
+        padding-left: 20px !important;
+      }
+
+      .main__table th:last-child {
+        padding-left: 20px !important;
+      }
+
+    .main__table td:first-child {
+        /* min-width: 30% !important; */
+        width: 80px !important;
+        min-width: 80px !important;
+        max-height: 50px !important;
+        display: block;
+        overflow: hidden;
+        text-overflow: "...";
+    }
+
+
+    .main__table td:nth-child(2) {
+        min-width: 30px !important;
+        width: 30px !important;
+    }
+
+    .main__table td:nth-child(3) {
+        min-width: 25px !important;
+        width: 25px !important;
+    }
+
+    .main__table td:nth-child(4) {
+        min-width: 30px !important;
+        width: 30px !important;
+    }
+
+    .main__table td:last-child {
+        min-width: 20px !important;
+        width: 20px !important;
+    }
+  }
+@media (min-width: 500px) {
+    
+    #wrapper {
+        flex-direction: column;
+    }
+
+    .main__table {
+        width:510px;
+        max-width: 510px;
+        font-size: 0.8rem !important;
+    }
+
+    .main__table td {
+        min-width: 40px !important;
+        max-width: 40px !important;
+        padding-left: 20px !important;
+        line-height: 0.9rem;    
+        overflow: hidden; 
+        word-break: break-word;
+        padding-right: 20px;
+        margin-top:20px;
+      }
+
+      .main__table th {
+        max-width: 40px !important;
+        min-width: 40px !important;
+        padding-left: 20px !important;
+        line-height: 0.9rem;   
+        padding-right: 20px;
+      }
+
+      /* .main__table td:last-child {
+        padding-left: 40px !important;
+      }
+
+      .main__table th:last-child {
+        padding-left: 40px !important;
+      } */
+
+    .main__table td:first-child {
+        /* min-width: 30% !important; */
+        width: 120px !important;
+        min-width: 120px !important;
+        max-height: 90px !important;
+        display: block;
+        overflow: hidden;
+        text-overflow: "...";
+    }
+
+
+    .main__table td:nth-child(2) {
+        min-width: 55px !important;
+        width: 55px !important;
+    }
+
+    /* .main__table td:nth-child(3) {
+        min-width: 40px !important;
+        width: 40px !important;
+    } */
+
+    .main__table td:nth-child(4) {
+        min-width: 55px !important;
+        width: 55px !important;
+    }
+
+    /* .main__table td:last-child {
+        min-width: 40px !important;
+        width: 40px !important;
+    } */
+}
+
+@media (min-width: 810px) {
+    
+    #wrapper {
+        flex-direction: row;
+    }
+
+    .main__table {
+        width:510px;
+        max-width: 510px;
+        font-size: 0.8rem !important;
+    }
+
+    .main__table td {
+        min-width: 40px !important;
+        max-width: 40px !important;
+        padding-left: 20px !important;
+        line-height: 0.9rem;    
+        overflow: hidden; 
+        word-break: break-word;
+        padding-right: 20px;
+        margin-top:20px;
+      }
+
+      .main__table th {
+        max-width: 40px !important;
+        min-width: 40px !important;
+        padding-left: 20px !important;
+        line-height: 0.9rem;   
+        padding-right: 20px;
+      }
+
+      /* .main__table td:last-child {
+        padding-left: 40px !important;
+      }
+
+      .main__table th:last-child {
+        padding-left: 40px !important;
+      } */
+
+    .main__table td:first-child {
+        /* min-width: 30% !important; */
+        width: 120px !important;
+        min-width: 120px !important;
+        max-height: 90px !important;
+        display: block;
+        overflow: hidden;
+        text-overflow: "...";
+    }
+
+
+    .main__table td:nth-child(2) {
+        min-width: 55px !important;
+        width: 55px !important;
+    }
+
+    /* .main__table td:nth-child(3) {
+        min-width: 40px !important;
+        width: 40px !important;
+    } */
+
+    .main__table td:nth-child(4) {
+        min-width: 55px !important;
+        width: 55px !important;
+    }
+
+    /* .main__table td:last-child {
+        min-width: 40px !important;
+        width: 40px !important;
+    } */
+}
